remove Database class use from survey and relation service classes